# ChanterLab

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  PLAN.md  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: container-image.yml  pages.yml  training-smoke.yml  unified-required-ci.yml
contract/: README.md  from_chant.js  from_musicxml.js  index.js  timed_score.js  to_scope.js  to_scoring.js
contract/tests/: contract.test.mjs  from_chant.test.mjs  from_musicxml.test.mjs  to_scope.test.mjs  to_scoring.test.mjs
docs/: AGILE-RESET-2026-07.md  APP-ROADMAP-2026.md  ARCHITECTURE.md  BUSINESS-MODEL-2026-07.md  BYZANTINE_CHANT_SCORE_PROPOSAL.md  BYZANTINE_SCALES_REFERENCE.md  CHANT_SCRIPT_ENGINE_AGENT_BRIEF.md  GLYPH_ATLAS_TESTING_GUIDE.md  GLYPH_IMPORT_TESTING_GUIDE.md  IOS-AUDIO-TEST.md  IOS-EVALUATION-2026-07.md  IOS-NATIVE-DECISION.md  MARKET-RESEARCH-2026-07.md  OCR_PIPELINE_REPORT.md  PENDING_ENGINE_WORK.md  choir-training-roadmap.md  omr-verification-2026-07-02.md  quality-ledger-v1-approval.html
docs/Archive/: FIELD_REPORT_2026-04-23.md  PENDING_ENGINE_WORK.md  README.md
docs/design/: CALM-SURFACE-SPEC.md  IOS-AUDIO-SESSION-ANALYSIS.md  MULTIPITCH-SPIKE.md  mockup-desktop.html  mockup-mobile-collapsed.html  mockup-mobile-expanded.html  mockup-mobile-scoring-report.html
docs/plans/: 00-acceptance-gates.md  00-agent-check-ins.md  ORCHESTRATOR.md  README.md
server/: byzorgan-web-server.py  entrypoint.py
src/: lib.rs  worklet.rs
src/dsp/: detector.rs  filters.rs  gate.rs  mod.rs  psola.rs
src/tuning/: cell.rs  degree.rs  event.rs  genus.rs  (+6 more)
training-prototype/: .gitignore  README.md  app.js  index.html  licensing.html  manifest.webmanifest  pitch_worklet.js  scope.js  scoring.js  style.css  tutorial.html
web/: app.js  glyph-atlas.css  glyph-atlas.html  glyph-atlas.js  index.html  raga_presets.js  style.css  training
(+225 files in other folders)
