[package]
name = "chanterlab-core"
version = "0.1.0-alpha.5"
edition = "2021"
description = "Byzantine tuning engine and DSP primitives for ChanterLab"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Serde derives on all tuning types + TuningGrid::serialize/deserialize.
serde = ["dep:serde", "dep:serde_json"]
# Full main-thread WASM API: serde + wasm_bindgen exports.
main = ["serde", "dep:wasm-bindgen"]
# Worklet-only DSP: filters, gate, pitch detector, PSOLA. No serde.
worklet = ["dep:wasm-bindgen", "dep:realfft"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
realfft = { version = "3", optional = true }

[dev-dependencies]
proptest = "1"
approx = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
